--- a/Frontend/src/app/components/navigation/navigation.component.html
+++ b/Frontend/src/app/components/navigation/navigation.component.html
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/list-messages']">Messages</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/list-modes']">Mode</a>
+                </li>
             </ul>
         </div>
     </div>
