--- a/Frontend/src/app/components/list-users/list-users.component.html
+++ b/Frontend/src/app/components/list-users/list-users.component.html
@@ -23,6 +23,7 @@
                           <th scope="col">Activities Organized</th>
                           <th scope="col">Activities</th>
                           <th scope="col">Messages</th> -->
+                          <!-- <th scope="col">Mode</th> -->
                           <th scope="col">Creation Date</th>
                           <th scope="col"></th>
                         </tr>
@@ -43,6 +44,7 @@
                           <td>{{ user?.activitiesOrganized }}</td>
                           <td>{{ user?.activities }}</td>
                           <td>{{ user?.messages }}</td> -->
+                          <!-- <td>{{ user.?mode }}</td> -->
                           <td>{{ user.creationDate }}</td>
                           <td>
                               <i [routerLink]="['/edit-user', user.name]" class="fa-solid fa-pen-to-square text-primary"></i>
